--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,8 +6,7 @@
 	// Update the 'dockerComposeFile' list if you have more compose files or use different names.
 	// The .devcontainer/docker-compose.yml file contains any overrides you need/want to make.
 	"dockerComposeFile": [
-		"../docker-compose.yaml",
-		"docker-compose.yml"
+		"../docker-compose.yml"
 	],
 	// The 'service' property is the name of the service for the container that VS Code should
 	// use. Update this value and .devcontainer/docker-compose.yml to the real service name.
@@ -17,7 +16,7 @@
 	"workspaceFolder": "${localWorkspaceFolder}",
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
-		"python.pythonPath": "/root/.cache/pypoetry/virtualenvs/code-of-points-markov-twitter-STdYqYtO-py3.8/bin/python",
+		"python.pythonPath": "/usr/local/bin/python",
 		"python.formatting.provider": "black",
 		"python.linting.flake8Enabled": true,
 		"python.linting.enabled": true,
