--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,12 +14,11 @@ jobs:
       TWITTER_TOKEN: ${{ secrets.TWITTER_TOKEN }}
       TWITTER_TOKEN_SECRET: ${{ secrets.TWITTER_TOKEN_SECRET }}
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
-      - name: Use Node.js 14.16.0
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: 14.16.0
+          node-version: "14"
 
       - name: install infra deps
         working-directory: markov-code-of-points-cdk
