--- a/markov-code-of-points-cdk/package.json
+++ b/markov-code-of-points-cdk/package.json
@@ -9,8 +9,9 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "synth": "npm run build && cdk synth",
-    "deploy": "cdk bootstrap && cdk deploy"
+    "synth": "cdk synth",
+    "bootstrap": "cdk bootstrap",
+    "deploy": "cdk deploy --require-approval never"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.129.0",
@@ -18,16 +19,14 @@
     "@types/node": "10.17.27",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.129.0",
+    "aws-cdk": "2.3.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-events": "1.129.0",
-    "@aws-cdk/aws-events-targets": "1.129.0",
-    "@aws-cdk/aws-lambda": "1.129.0",
-    "@aws-cdk/aws-lambda-python": "1.129.0",
-    "@aws-cdk/core": "1.129.0",
+    "@aws-cdk/aws-lambda-python-alpha": "2.3.0-alpha.0",
+    "aws-cdk-lib": "2.3.0",
+    "constructs": "^10.0.0",
     "source-map-support": "^0.5.16"
   }
 }
